deploy.yaml
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: setale-me
#   labels:
#     app: websites
#     website: setale-me
# spec:
#   type: ClusterIP
#   selector:
#     app: websites
#     website: setale-me
#   ports:
#     - name: http
#       port: 80
#       targetPort: "http"
---
apiVersion: v1
kind: Service
metadata:
  name: redirect-setale-me
  labels:
    app: websites
    website: redirect-setale-me
spec:
  type: ClusterIP
  selector:
    app: websites
    website: redirect-setale-me
  ports:
    - name: http
      port: 80
      targetPort: "http"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: setale-me
  labels:
    website: setale-me
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
      - setale.me
      - who.is.lorenzo.setale.me
      - who.is.setale.me
      - www.setale.me
      secretName: setale-me-tls
  rules:
    # - host: setale.me
    #   http:
    #     paths:
    #     - backend:
    #         serviceName: setale-me
    #         servicePort: 80
    #       path: /
    - host: who.is.setale.me
      http:
        paths:
        - backend:
            serviceName: redirect-setale-me
            servicePort: 80
          path: /
    - host: who.is.lorenzo.setale.me
      http:
        paths:
        - backend:
            serviceName: redirect-setale-me
            servicePort: 80
          path: /
    - host: www.setale.me
      http:
        paths:
        - backend:
            serviceName: redirect-setale-me
            servicePort: 80
          path: /
# ---
# apiVersion: extensions/v1beta1
# kind: Deployment
# metadata:
#   name: setale-me
#   labels:
#     app: websites
#     website: setale-me
# spec:
#   replicas: 1 # or 2?
#   selector:
#     matchLabels:
#       app: websites
#       website: setale-me
#   template:
#     metadata:
#       name: setale-me
#       labels:
#         app: websites
#         website: setale-me
#     spec:
#       hostname: setale-me
#       containers:
#         - name: setale-me
#           image: koalalorenzo/setale.me
#           imagePullPolicy: Always
#           ports:
#             - containerPort: 80
#               name: http
#           resources:
#             requests:
#               memory: "64Mi"
#               cpu: "100m"
#             limits:
#               memory: "512Mi"
#               cpu: "1000m"
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redirect-setale-me
  labels:
    app: websites
    website: redirect-setale-me
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websites
      website: redirect-setale-me
  template:
    metadata:
      name: redirect-setale-me
      labels:
        app: websites
        website: redirect-setale-me
    spec:
      hostname: redirect-setale-me
      containers:
        - name: redirect-setale-me
          image: ianneub/redirect
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: "10m"
              memory: "20Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
---
